--- a/client/src/components/GuitarCreator/GuitarCreator.html
+++ b/client/src/components/GuitarCreator/GuitarCreator.html
@@ -1,2 +1,26 @@
-<h1>Guitar Creation Component</h1>
-{{$ctrl.greeting}}
+<div>
+    <form novalidate>
+	<div class="form-group">
+	    <label for="manufacturer">Manufacturer:</label>
+	    <input type="text" class="form-control" id="manufacturer" required/>
+	</div>
+	<div class="form-group">
+	    <label for="model">Model</label>
+	    <input type="text" class="form-control" id="model" required/>
+	</div>
+	<div class="form-group">
+	    <label for="color">Color</label>
+	    <input type="text" class="form-control" id="color" required/>
+	</div>
+	<div class="form-group">
+	    <label for="purchaseDate">Purchase Date</label>
+	    <input type="text" class="form-control" id="purchaseDate"/>
+	</div>
+	<div class="form-group">
+	    <label for="price">Price</label>
+	    <input type="text" class="form-control" id="price"/>
+	</div>
+	<input type="button" class="btn btn-primary" value="Reset"/>
+	<input type="submit" class="btn btn-primary" value="Submit"/>
+    </form>
+</div>
