--- a/client/src/components/GuitarCreator/GuitarCreator.html
+++ b/client/src/components/GuitarCreator/GuitarCreator.html
@@ -2,23 +2,23 @@
     <form novalidate>
 	<div class="form-group">
 	    <label for="manufacturer">Manufacturer:</label>
-	    <input type="text" class="form-control" id="manufacturer" required/>
+	    <input type="text" class="form-control" id="manufacturer" required ng-model="guitar.manufacturer"/>
 	</div>
 	<div class="form-group">
 	    <label for="model">Model</label>
-	    <input type="text" class="form-control" id="model" required/>
+	    <input type="text" class="form-control" id="model" required ng-model="guitar.model"/>
 	</div>
 	<div class="form-group">
 	    <label for="color">Color</label>
-	    <input type="text" class="form-control" id="color" required/>
+	    <input type="text" class="form-control" id="color" required ng-model="guitar.color"/>
 	</div>
 	<div class="form-group">
 	    <label for="purchaseDate">Purchase Date</label>
-	    <input type="text" class="form-control" id="purchaseDate"/>
+	    <input type="text" class="form-control" id="purchaseDate" ng-model="guitar.purchaseDate"/>
 	</div>
 	<div class="form-group">
 	    <label for="price">Price</label>
-	    <input type="text" class="form-control" id="price"/>
+	    <input type="text" class="form-control" id="price" ng-model="guitar.price"/>
 	</div>
 	<input type="button" class="btn btn-primary" value="Reset"/>
 	<input type="submit" class="btn btn-primary" value="Submit"/>
