--- a/client/src/components/Navigation/Navigation.html
+++ b/client/src/components/Navigation/Navigation.html
@@ -5,8 +5,8 @@
 	</div>
 	<ul class="nav navbar-nav">
 	    <li class="active"><a href="#">Home</a></li>
-	    <li><a href="#">Page 1</a></li>
-	    <li><a href="#">Page 2</a></li> 
+	    <li><a href="/#/guitar">List</a></li>
+	    <li><a href="/#/guitarCreator">Create Guitar</a></li> 
 	    <li><a href="#">Page 3</a></li> 
 	</ul>
     </div>
