Some progress towards the list, not working correctly.

--- a/client/src/components/GuitarList/GuitarList.html
+++ b/client/src/components/GuitarList/GuitarList.html
@@ -2,4 +2,7 @@
     <div class="page-header">
 	<h1>Guitar list</h1>
     </div>
+    <ul>
+	<li ng-repeat="guitar in $ctrl.guitars">{{guitar | json}}</li>
+    </ul>
 </div>
