--- a/client/src/components/Navigation/Navigation.html
+++ b/client/src/components/Navigation/Navigation.html
@@ -4,7 +4,7 @@
 	    <a class="navbar-brand" href="#">Guitar Care Center</a>
 	</div>
 	<ul class="nav navbar-nav">
-	    <li class="active"><a href="#">Home</a></li>
+	    <li><a href="#">Home</a></li>
 	    <li><a href="/#/guitar">List</a></li>
 	    <li><a href="/#/guitarCreator">Create Guitar</a></li> 
 	    <li><a href="#">Page 3</a></li> 
