Guitars created in the GuitarCreator are shown in List.

--- a/client/src/components/GuitarCreator/GuitarCreator.html
+++ b/client/src/components/GuitarCreator/GuitarCreator.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="pull-right">
 	    <input type="button" class="btn btn-warning" value="Reset" ng-click="$ctrl.resetForm()"/>
-	    <input type="submit" class="btn btn-primary" value="Submit"/>
+	    <input type="submit" class="btn btn-primary" value="Submit" ng-click="$ctrl.add()"/>
 	</div>
     </form>
 </div>
