--- a/client/src/components/Navigation/Navigation.html
+++ b/client/src/components/Navigation/Navigation.html
@@ -1,13 +1,21 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
 	<div class="navbar-header">
+	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navlinks">
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
+	    </button>
 	    <a class="navbar-brand" href="#">Guitar Care Center</a>
 	</div>
-	<ul class="nav navbar-nav">
-	    <li><a href="#">Home</a></li>
-	    <li><a href="/#/guitar">List</a></li>
-	    <li><a href="/#/guitarCreator">Create Guitar</a></li> 
-	    <li><a href="#">Page 3</a></li> 
-	</ul>
+
+	<div class="collapse navbar-collapse" id="navlinks">
+	    <ul class="nav navbar-nav">
+		<li><a href="#">Home</a></li>
+		<li><a href="/#/guitar">List</a></li>
+		<li><a href="/#/guitarCreator">Create Guitar</a></li> 
+		<li><a href="#">Page 3</a></li> 
+	    </ul>
+	</div>
     </div>
 </nav>
