Modified the routes.

--- a/client/src/components/Navigation/Navigation.html
+++ b/client/src/components/Navigation/Navigation.html
@@ -11,10 +11,9 @@
 
 	<div class="collapse navbar-collapse" id="navlinks">
 	    <ul class="nav navbar-nav">
-		<li><a href="#">Home</a></li>
+		<li><a href="/#/">Home</a></li>
 		<li><a href="/#/guitar">List</a></li>
 		<li><a href="/#/guitarCreator">Create Guitar</a></li> 
-		<li><a href="#">Page 3</a></li> 
 	    </ul>
 	</div>
     </div>
